--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Chivo:wght@500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Chivo:wght@700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <script src="main.js" type="text/javascript" defer></script>
   <title>Frontend Mentor | Pod request access landing page</title>
 </head>
 <body>
@@ -32,21 +33,26 @@
         Apple Podcasts, Google Podcasts, Pocket Casts and more!
       </p>
 
-      <form class="form">
-        <div class="inputs">
-          <input id="email" type="email" placeholder="Email address"> 
-          <input type="submit" value="Request Access">
+      <div class="flex-container">
+        <form class="form">
+          <div class="inputs">
+            <input id="email" type="email" placeholder="Email address"> 
+            <input id="submit" type="submit" value="Request Access">
+          </div>
+          <span id="error-message" class="error-submitted">Oops! Please check your email</span>
+        </form>
+  
+        <div class="logos">
+          <picture><img src="./assets/desktop/spotify.svg" alt="spotify logo"></picture>
+          <picture><img src="./assets/desktop/apple-podcast.svg" alt="apple podcast logo"></picture>
+          <picture><img src="./assets/desktop/google-podcasts.svg" alt="google podcast logo"></picture>
+          <picture><img src="./assets/desktop/pocket-casts.svg" alt="pocket casts logo"></picture>
         </div>
-        <span class="error-submitted">Oops! Please check your email</span>
-      </form>
-
-      <div class="logos">
-        <picture><img src="./assets/desktop/spotify.svg" alt="spotify logo"></picture>
-        <picture><img src="./assets/desktop/apple-podcast.svg" alt="apple podcast logo"></picture>
-        <picture><img src="./assets/desktop/google-podcasts.svg" alt="google podcast logo"></picture>
-        <picture><img src="./assets/desktop/pocket-casts.svg" alt="pocket casts logo"></picture>
       </div>
     </article>
+    <picture class="dots">
+      <img src="./assets/desktop/bg-pattern-dots.svg" alt="pattern dots img">
+    </picture>
   </main>
 </body>
 </html>
